- LoggerManager: add global exception log function - Config module   - Rename Element to Config   - add default field in Config   - add obsolete fields in Config   - add password type value   - format & doc   - remove obsolete ConfigService#update   - extend ConfigService#add: include value and values processing
: exceptions, add missing Exception name suffixes

--- a/Themes/Base/Backend/SystemSettingsGroup/Index.twig
+++ b/Themes/Base/Backend/SystemSettingsGroup/Index.twig
@@ -30,6 +30,17 @@
                                            value="{{ element.values[0].value }}">
                                 </div>
 
+                            {% elseif element.type == "password" %}
+                                <div class="form-group">
+                                    <label for="{{ element.name }}">
+                                        {{ i18n(element.label) }}
+                                    </label>
+                                    <input type="{{ element.type }}"
+                                           class="form-control"
+                                           name="{{ element.name }}"
+                                           value="{{ element.values[0].value }}" />
+                                </div>
+
                             {% elseif element.type == "integer" %}
                                 <div class="form-group">
                                     <label for="{{ element.name }}">{{ i18n(element.label) }}</label>
